objects/Call_Report_Opportunity__c.object
<CustomObject>
    <description>This object track the relationship between Call Report and Opportunity for the many to many relationship</description>
    <fields>
        <fullName>AH__c</fullName>
        <formula>Opportunity_Name__r.Account.AH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Visit_Date__c</fullName>
        <formula>Call_Plan_Call_Report__r.Actual_Visit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_No_F__c</fullName>
        <formula>Opportunity_Name__r.Application_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Plan_Call_Report__c</fullName>
        <label>Call Plan / Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipName>Call_Report_Opportunity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Call_Result_Activity__c</fullName>
        <formula>Call_Plan_Call_Report__r.Call_Result_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Result Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity_Name__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <formula>Call_Plan_Call_Report__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owner_Release_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Owner Release Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <formula>Call_Plan_Call_Report__r.Memo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Memo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_App_In__c</fullName>
        <formula>IF ( TEXT(Opportunity_Name__r.Actual_RM_Submit_Date__c) &lt;&gt; NULL ||               
     TEXT(Opportunity_Name__r.First_Application_SO_Receive_Date__c)  &lt;&gt; NULL , 1 , 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of App In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Day_Created__c</fullName>
        <formula>Opportunity_Name__r.Number_of_Day_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Day Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Setup__c</fullName>
        <formula>IF(OR(TEXT(Opportunity_Name__r.StageName) = &quot;Partial Loan Setup&quot; , 
TEXT(Opportunity_Name__r.StageName) = &quot;All Loan Setup&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Setup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Stock__c</fullName>
        <formula>IF((TEXT(Opportunity_Name__r.StageName) &lt;&gt; &quot;&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Interest__c</fullName>
        <formula>TEXT(Call_Plan_Call_Report__r.Offer_Interest__c) &amp; &quot; - &quot; &amp;  TEXT(Call_Plan_Call_Report__r.Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Interest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity_Name__r.Amount_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.OwnerId</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Call Reports / Opportunities</relationshipLabel>
        <relationshipName>Call_Report_Opportunity</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <formula>Call_Plan_Call_Report__r.Plan_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Primary_Call_Plan_Call_Report__c</fullName>
        <formula>HYPERLINK(Call_Plan_Call_Report__r.Primary_Call_Plan_Call_Report__c, Call_Plan_Call_Report__r.Primary_Call_Plan_Call_Report__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Call Plan / Call Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT( Opportunity_Name__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Call_Plan_Call_Report__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tentative_App_Submit_Date__c</fullName>
        <formula>Opportunity_Name__r.Tentative_Application_Submit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tentative App Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Objective__c</fullName>
        <formula>TEXT(Call_Plan_Call_Report__r.Visit_Objective__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Objective</label>
        <type>Text</type>
    </fields>
    <label>Call Report / Opportunity</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Reports / Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>